fix: update attribution link

--- a/popup.html
+++ b/popup.html
@@ -57,7 +57,7 @@
       
       <div class="attribution">
         <p>Prices from <a href="https://boardgameprices.co.uk" target="_blank">BoardGamePrices.co.uk</a></p>
-        <p>Made with ❤️ by <a href="https://www.karldaniel.co.uk" target="_blank">Karl Daniel</a></p>
+        <p>Made with ❤️ by <a href="https://www.buymeacoffee.com/kkjdaniel" target="_blank">Karl Daniel</a></p>
       </div>
     </div>
   </div>
